--- a/DIG_last/css/style.css
+++ b/DIG_last/css/style.css
@@ -1,2 +1,15 @@
 @charset "utf-8";
 
+* {
+    box-sizing: border-box;
+    margin:0;
+    padding:0;
+}
+
+body{
+    
+}
+
+html{
+    overflow-y: scroll;
+}
